Add Dockerfiles, Kubernetes configs, and test configuration for logistics engine and API gateway auth

--- a/api-gateway-auth/Dockerfile
+++ b/api-gateway-auth/Dockerfile
@@ -1,16 +1,30 @@
+FROM node:18-alpine AS builder
+
+RUN npm install -g pnpm
+
+WORKDIR /app
+
+COPY package.json pnpm-lock.yaml* ./
+
+RUN pnpm install --frozen-lockfile
+
+COPY . .
+
+RUN pnpm run build
+
 FROM node:18-alpine
 
 RUN npm install -g pnpm
 
 WORKDIR /app
 
-COPY package.json pnpm-lock.yaml* tsconfig.json nest-cli.json ./
+COPY package.json pnpm-lock.yaml* ./
 
-RUN pnpm install
+RUN pnpm install --prod --frozen-lockfile
 
-COPY src/ ./src/
+COPY --from=builder /app/dist ./dist
 
-RUN pnpm run build
+ENV NODE_ENV=production
 
 EXPOSE 3000
 
