--- a/api-gateway-auth/k8s-deployment.yaml
+++ b/api-gateway-auth/k8s-deployment.yaml
@@ -24,27 +24,26 @@ spec:
           name: http
         resources:
           requests:
-            cpu: "100m"
-            memory: "128Mi"
-          limits:
             cpu: "200m"
             memory: "256Mi"
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
         livenessProbe:
           httpGet:
             path: /auth/health
-            port: 3000
-          initialDelaySeconds: 60
-          periodSeconds: 15
-          timeoutSeconds: 3
+            port: http
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
           failureThreshold: 3
         readinessProbe:
           httpGet:
             path: /auth/health
-            port: 3000
-          initialDelaySeconds: 30
+            port: http
+          initialDelaySeconds: 15
           periodSeconds: 10
-          timeoutSeconds: 3
-          failureThreshold: 3
+          timeoutSeconds: 5
         env:
         - name: NODE_ENV
           value: "production"
@@ -59,10 +58,10 @@ metadata:
   labels:
     app: api-gateway-auth
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
-  - port: 80
-    targetPort: 3000
+  - port: 3000
+    targetPort: http
     protocol: TCP
     name: http
   selector:
