--- a/api-gateway-auth/.env.example
+++ b/api-gateway-auth/.env.example
@@ -1,17 +1,43 @@
-# Application
+# API Gateway Configuration
 PORT=3000
 NODE_ENV=development
 
-# Database
+# Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=api_gateway_auth
-DB_SYNCHRONIZE=true
-DB_LOGGING=true
-DB_SSL=false
 
-# JWT
-JWT_SECRET=your-super-secret-key-here
-JWT_EXPIRATION=1d 
+# Security Configuration
+SESSION_SECRET=your-secure-session-secret
+SESSION_SALT=your-secure-session-salt
+CSRF_SECRET=your-secure-csrf-secret
+
+# JWT Configuration
+JWT_SECRET=your-jwt-secret-key
+JWT_EXPIRES_IN=1h
+
+# Microservices Configuration
+NOTIFICATION_SERVICE_HOST=localhost
+NOTIFICATION_SERVICE_PORT=3001
+
+INVENTORY_SERVICE_HOST=localhost
+INVENTORY_SERVICE_PORT=3002
+
+AI_ML_SERVICE_HOST=localhost
+AI_ML_SERVICE_PORT=3003
+
+# Rate Limiter Configuration
+RATE_LIMIT_POINTS=100
+RATE_LIMIT_DURATION=60
+RATE_LIMIT_BLOCK_DURATION=60
+
+# Logging Configuration
+LOG_LEVEL=debug
+ELK_HOST=localhost
+ELK_PORT=9200
+
+# Monitoring Configuration
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3100 
