--- a/api-gateway-auth/package.json
+++ b/api-gateway-auth/package.json
@@ -17,10 +17,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.config.js"
+    "test:e2e": "jest --config ./test/jest-e2e.config.js",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "npm run typeorm -- -d src/data-source.ts migration:generate src/migrations/$npm_config_name",
+    "migration:create": "npm run typeorm -- migration:create src/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm -- -d src/data-source.ts migration:run",
+    "migration:revert": "npm run typeorm -- -d src/data-source.ts migration:revert",
+    "migration:show": "npm run typeorm -- -d src/data-source.ts migration:show"
   },
   "dependencies": {
     "@fastify/csrf-protection": "^7.0.2",
+    "@fastify/helmet": "^13.0.1",
     "@fastify/static": "^8.1.1",
     "@nestjs/common": "^11.0.0",
     "@nestjs/config": "^4.0.0",
@@ -36,6 +43,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.1",
     "nest-winston": "^1.10.2",
     "nestjs-rate-limiter": "^3.1.0",
     "passport": "^0.7.0",
@@ -52,6 +61,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.10",
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^8.2.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
