--- a/frontend-auth/package.json
+++ b/frontend-auth/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.6",
+    "terser": "^5.39.0",
     "typescript": "~5.2.0",
     "vite": "^5.0.5",
     "vue-tsc": "^1.8.24"
