--- a/api-gateway-auth/.env.example
+++ b/api-gateway-auth/.env.example
@@ -8,6 +8,9 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=api_gateway_auth
+DB_SYNCHRONIZE=false
+DB_MIGRATIONS_RUN=true
+DB_LOGGING=true
 
 # Security Configuration
 SESSION_SECRET=your-secure-session-secret
