--- a/logistics-engine/Cargo.toml
+++ b/logistics-engine/Cargo.toml
@@ -3,10 +3,74 @@ name = "logistics-engine"
 version = "0.1.0"
 edition = "2021"
 
+[build-dependencies]
+tonic-build = "0.12.3"
+
 [dependencies]
-axum = "0.7"
-tokio = { version = "1.0", features = ["full"] }
-tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.4", features = ["trace"] }
+# Web framework and HTTP
+axum = { version = "0.8.1", features = ["macros", "multipart", "ws"] }
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
+tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
+tower-http = { version = "0.6.2", features = ["trace", "cors", "compression-gzip", "timeout", "limit", "auth", "catch-panic", "request-id", "sensitive-headers"] }
+hyper = { version = "1.0", features = ["full"] }
+hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
+http = "1.0"
+
+# Async runtime
+tokio = { version = "1.0", features = ["full", "tracing"] }
+tokio-stream = { version = "0.1", features = ["net"] }
+tokio-tungstenite = "0.26.2"
+futures = "0.3"
+async-trait = "0.1"
+
+# Database
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
+
+# Serialization
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_derive = "1.0"
+uuid = { version = "1.4", features = ["serde", "v4"] }
+chrono = { version = "0.4", features = ["serde"] }
+
+# Configuration
+dotenv = "0.15"
+config = "0.15.8"
+
+# Validation
+validator = { version = "0.20.0", features = ["derive"] }
+
+# Error handling
+anyhow = "1.0"
+thiserror = "2.0.11"
+
+# Logging and tracing
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing-appender = "0.2"
+
+# gRPC
+tonic = { version = "0.12.3", features = ["tls", "gzip"] }
+tonic-build = "0.12.3"
+prost = "0.13.5"
+prost-types = "0.13.5"
+
+# Message queue
+lapin = "2.3"
+deadpool-lapin = "0.12.1"
+
+# WebSockets
+futures-util = "0.3"
+
+# Hashing and security
+argon2 = "0.5"
+jsonwebtoken = "9.3.1"
+rand = "0.9.0"
+
+# Misc
+once_cell = "1.18"
+lazy_static = "1.4"
+regex = "1.9"
+parking_lot = "0.12"
+mockall = "0.13.1"
+reqwest = { version = "0.12.12", features = ["json"] }
