--- a/logistics-engine/Cargo.toml
+++ b/logistics-engine/Cargo.toml
@@ -17,24 +17,24 @@ hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
 http = "1.0"
 
 # Async runtime
-tokio = { version = "1.0", features = ["full", "tracing"] }
+tokio = { version = "1.36.0", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["net"] }
 tokio-tungstenite = "0.26.2"
 futures = "0.3"
-async-trait = "0.1"
+async-trait = "0.1.77"
 
 # Database
-sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
+sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "bigdecimal"] }
 
 # Serialization
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 serde_derive = "1.0"
-uuid = { version = "1.4", features = ["serde", "v4"] }
-chrono = { version = "0.4", features = ["serde"] }
+uuid = { version = "1.7.0", features = ["v4", "serde"] }
+chrono = { version = "0.4.34", features = ["serde"] }
 
 # Configuration
-dotenv = "0.15"
+dotenv = "0.15.0"
 config = "0.15.8"
 
 # Validation
@@ -42,11 +42,11 @@ validator = { version = "0.20.0", features = ["derive"] }
 
 # Error handling
 anyhow = "1.0"
-thiserror = "2.0.11"
+thiserror = "1.0.57"
 
 # Logging and tracing
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tracing-appender = "0.2"
 
 # gRPC
@@ -67,6 +67,10 @@ argon2 = "0.5"
 jsonwebtoken = "9.3.1"
 rand = "0.9.0"
 
+# Decimal types
+rust_decimal = "1.34.3"
+rust_decimal_macros = "1.33"
+
 # Misc
 once_cell = "1.18"
 lazy_static = "1.4"
@@ -74,3 +78,9 @@ regex = "1.9"
 parking_lot = "0.12"
 mockall = "0.13.1"
 reqwest = { version = "0.12.12", features = ["json"] }
+
+bigdecimal = { version = "0.4", features = ["serde"] }
+
+# Added from the code block
+num-traits = "0.2.18"
+time = { version = "0.3.38", features = ["serde"] }
