--- a/frontend-dashboard/package.json
+++ b/frontend-dashboard/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-tabs": "1.1.3",
     "@tailwindcss/forms": "0.5.10",
+    "@tanstack/react-query": "^5.67.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.477.0",
@@ -34,7 +35,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shadcn-ui": "0.9.5",
-    "tailwind-merge": "3.0.2"
+    "tailwind-merge": "3.0.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "22.13.8",
