--- a/frontend-dashboard/package.json
+++ b/frontend-dashboard/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query": "^5.67.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "cmdk": "^1.0.4",
     "lucide-react": "0.477.0",
     "next": "14",
     "react": "18.2.0",
