--- a/logistics-engine/Cargo.toml
+++ b/logistics-engine/Cargo.toml
@@ -20,7 +20,9 @@ http = "1.0"
 tokio = { version = "1.36.0", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["net"] }
 tokio-tungstenite = "0.26.2"
+tokio-executor-trait = "2.1"
 futures = "0.3"
+futures-lite = "1.13.0"
 async-trait = "0.1.77"
 
 # Database
