feat: Implement Order Producer Service for Automated Order Generation
- Introduce OrderProducerService to handle automated order generation based on configuration settings
- Add configuration options for order generation frequency, quantity, and item limits in .env.example
- Integrate order producer service into the main application flow with graceful startup and shutdown handling
- Enhance application logging to track order generation and potential errors
- Update application configuration to include order producer settings and ensure proper initialization
- Implement randomization features for order generation timing and item counts to simulate realistic order patterns
- Ensure compatibility with existing order and payment services for seamless integration

--- a/logistics-engine/.env.example
+++ b/logistics-engine/.env.example
@@ -29,4 +29,18 @@ JAEGER_ENDPOINT=http://localhost:14268/api/traces
 SERVICE_NAME=logistics-engine
 
 # Prometheus Configuration
-METRICS_PORT=9091 
+METRICS_PORT=9091
+
+# Order Producer Configuration
+# Set to 'true' to enable the automatic order generation service
+ORDER_PRODUCER_ENABLED=false
+# How often to generate orders (in seconds)
+ORDER_PRODUCER_INTERVAL_SECONDS=60
+# Minimum number of orders to generate in each interval
+ORDER_PRODUCER_MIN_ORDERS=1
+# Maximum number of orders to generate in each interval
+ORDER_PRODUCER_MAX_ORDERS=5
+# Maximum number of items per generated order
+ORDER_PRODUCER_MAX_ITEMS=10
+# Whether to randomize the timing within intervals (vs exact timing)
+ORDER_PRODUCER_RANDOMIZE=true 
