--- a/inventory-sync-service/.env.example
+++ b/inventory-sync-service/.env.example
@@ -1,13 +1,14 @@
 # Server Configuration
 ENV=development
-GRPC_PORT=:50051
+GRPC_PORT=:50052
 HTTP_PORT=:8080
 
 # Database Configuration (for future implementation)
-DATABASE_URL=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_NAME=
+DATABASE_URL=postgres://logistics:logistics_password@localhost:5433/logistics_engine?sslmode=disable
+DATABASE_USERNAME=logistics_engine
+DATABASE_PASSWORD=logistics_password
+DATABASE_NAME=logistics_engine
 
 # Authentication
-JWT_SECRET=inventory-sync-service-jwt-secret-for-development-only
+JWT_SECRET=your-logistics-engine-jwt-secret-key-for-dev-only
+AUTH_SERVICE_URL=http://api-gateway-auth:3000
