--- a/frontend-dashboard/package.json
+++ b/frontend-dashboard/package.json
@@ -28,6 +28,7 @@
     "@radix-ui/react-tabs": "1.1.3",
     "@tailwindcss/forms": "0.5.10",
     "@tanstack/react-query": "^5.67.1",
+    "@types/d3": "^7.4.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "^1.0.4",
