--- a/frontend-dashboard/package.json
+++ b/frontend-dashboard/package.json
@@ -30,17 +30,19 @@
     "@tanstack/react-query": "^5.67.1",
     "@types/d3": "^7.4.3",
     "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
+    "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
-    "lucide-react": "0.477.0",
+    "lucide-react": "^0.274.0",
     "next": "14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shadcn-ui": "0.9.5",
-    "tailwind-merge": "3.0.2",
-    "zustand": "^5.0.3"
+    "tailwind-merge": "^1.14.0",
+    "zustand": "^5.0.3",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/node": "22.13.8",
