--- a/frontend-dashboard/package.json
+++ b/frontend-dashboard/package.json
@@ -38,11 +38,11 @@
     "next": "14",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.30.0",
     "shadcn-ui": "0.9.5",
     "tailwind-merge": "^1.14.0",
-    "zustand": "^5.0.3",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.14.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "22.13.8",
