--- a/ai-ml-predictions/requirements.txt
+++ b/ai-ml-predictions/requirements.txt
@@ -4,47 +4,65 @@ wheel>=0.42.0
 Cython>=3.0.8
 
 # Core Dependencies
-fastapi==0.109.0
-uvicorn==0.27.0
-python-dotenv==1.0.0
-pydantic==2.5.3
-pydantic-settings==2.1.0
+fastapi==0.110.0
+uvicorn==0.27.1
+python-dotenv==1.0.1
+pydantic==2.6.3
+pydantic-settings==2.2.1
+starlette==0.36.3
 
 # Database and Caching
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
+sqlalchemy[asyncio]==2.0.28
+asyncpg==0.29.0
 redis==5.0.1
 alembic==1.13.1
 
 # ML Dependencies
-numpy==1.24.4  # Last version with Python 3.12 wheels
-pandas==1.5.3  # Compatible with numpy 1.24.4
-scikit-learn==1.3.2
-lightgbm==4.1.0
-xgboost==2.0.3
---find-links https://download.pytorch.org/whl/cpu
-torch==2.1.2+cpu
-mlflow==2.9.2
+numpy==1.26.4
+pandas==2.2.1
+scikit-learn==1.4.1.post1
+torch==2.1.2
+torchvision==0.16.2
+torchaudio==2.1.2
+mlflow==2.11.1
 
-# Feature Store (temporarily commented out due to compatibility issues)
-# feast==0.34.1  # Will be added back once dependencies are resolved
+# Async Dependencies
+aiohttp==3.9.3
+aiosignal==1.3.1
+anyio==4.3.0
+apscheduler==3.10.4
 
-# Monitoring and Logging
-prometheus-client==0.19.0
-python-json-logger==2.0.7
-opentelemetry-api==1.21.0
-opentelemetry-sdk==1.21.0
+# HTTP and Networking
+h11==0.14.0
+httpx==0.26.0
+uvloop==0.19.0
+
+# Utilities
+annotated-types==0.6.0
+attrs==23.2.0
+certifi==2024.2.2
+click==8.1.7
+colorama==0.4.6
+frozenlist==1.4.1
+greenlet==3.0.3
+idna==3.6
+multidict==6.0.5
+packaging==23.2.0
+pydantic_core==2.16.3
+python-dateutil==2.8.2
+pytz==2024.1
+scipy==1.12.0
+six==1.16.0
+sniffio==1.3.1
+typing_extensions==4.10.0
+tzdata==2024.1
+tzlocal==5.2
+yarl==1.9.4
 
 # Testing
 pytest==7.4.4
 pytest-cov==4.1.0
 pytest-asyncio==0.23.3
-httpx==0.26.0
-
-# Security
-python-jose==3.3.0
-passlib==1.7.4
-bcrypt==4.1.2
 
 # Development
 black==23.12.1
