--- a/ai-ml-predictions/Dockerfile
+++ b/ai-ml-predictions/Dockerfile
@@ -1,15 +1,17 @@
-FROM continuumio/miniconda3:latest
+FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy environment file
-COPY environment.yml .
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
-# Create conda environment
-RUN conda env create -f environment.yml
+# Copy requirements file
+COPY requirements.txt .
 
-# Make RUN commands use the new environment
-SHELL ["conda", "run", "-n", "ai-ml-predictions", "/bin/bash", "-c"]
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
@@ -22,7 +24,7 @@ ENV PYTHONUNBUFFERED=1 \
 EXPOSE 3004 8084
 
 # Run the application
-CMD ["conda", "run", "--no-capture-output", "-n", "ai-ml-predictions", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3004"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "3004"]
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD conda run -n ai-ml-predictions curl -f http://localhost:3004/health || exit 1 
+    CMD curl -f http://localhost:3004/health || exit 1 
