--- a/ai-ml-predictions/environment.yml
+++ b/ai-ml-predictions/environment.yml
@@ -49,5 +49,6 @@ dependencies:
   - pip:
     # Packages not available in conda or need specific versions
     - feast==0.34.1
-    - pydantic==1.10.13
+    - pydantic>=2.5.2
+    - pydantic-settings>=2.1.0
     - python-dotenv>=1.0.0 
