--- a/ai-ml-predictions/requirements.txt
+++ b/ai-ml-predictions/requirements.txt
@@ -4,27 +4,29 @@ wheel>=0.42.0
 Cython>=3.0.8
 
 # Core Dependencies
-fastapi==0.110.0
-uvicorn==0.27.1
-python-dotenv==1.0.1
-pydantic==2.6.3
-pydantic-settings==2.2.1
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+python-dotenv>=1.0.0
+pydantic>=2.5.2
+pydantic-settings>=2.1.0
 starlette==0.36.3
 
 # Database and Caching
-sqlalchemy[asyncio]==2.0.28
-asyncpg==0.29.0
-redis==5.0.1
-alembic==1.13.1
+sqlalchemy>=2.0.23
+asyncpg>=0.29.0
+psycopg2-binary>=2.9.9
+redis>=5.0.1
+alembic>=1.13.0
 
 # ML Dependencies
-numpy==1.26.4
-pandas==2.2.1
-scikit-learn==1.4.1.post1
+numpy>=1.26.2
+pandas>=2.1.3
+scikit-learn>=1.3.2
 torch==2.1.2
 torchvision==0.16.2
 torchaudio==2.1.2
-mlflow==2.11.1
+mlflow>=2.9.2
+joblib>=1.3.2
 
 # Async Dependencies
 aiohttp==3.9.3
@@ -34,7 +36,7 @@ apscheduler==3.10.4
 
 # HTTP and Networking
 h11==0.14.0
-httpx==0.26.0
+httpx>=0.25.2
 uvloop==0.19.0
 
 # Utilities
@@ -49,8 +51,8 @@ idna==3.6
 multidict==6.0.5
 packaging==23.2.0
 pydantic_core==2.16.3
-python-dateutil==2.8.2
-pytz==2024.1
+python-dateutil>=2.8.2
+pytz>=2023.3.post1
 scipy==1.12.0
 six==1.16.0
 sniffio==1.3.1
@@ -58,14 +60,29 @@ typing_extensions==4.10.0
 tzdata==2024.1
 tzlocal==5.2
 yarl==1.9.4
+python-json-logger>=2.0.7
+structlog>=23.2.0
+tenacity>=8.2.3
 
 # Testing
-pytest==7.4.4
-pytest-cov==4.1.0
-pytest-asyncio==0.23.3
+pytest>=7.4.3
+pytest-cov>=4.1.0
+pytest-asyncio>=0.23.2
 
 # Development
-black==23.12.1
-isort==5.13.2
-flake8==7.0.0
-mypy==1.8.0 
+black>=23.11.0
+isort>=5.12.0
+flake8>=6.1.0
+mypy>=1.7.1
+
+# Monitoring and metrics
+prometheus-client>=0.19.0
+opentelemetry-api>=1.21.0
+opentelemetry-sdk>=1.21.0
+opentelemetry-instrumentation-fastapi>=0.42b0
+opentelemetry-instrumentation-sqlalchemy>=0.42b0
+
+# Security
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.6 
