feat: Remove obsolete order creation and transaction fix documentation
- Delete outdated markdown files related to order creation and transaction fixes to streamline project documentation.
- Ensure clarity and relevance in the documentation by removing unnecessary historical context.

--- a/ai-ml-predictions/.env.example
+++ b/ai-ml-predictions/.env.example
@@ -2,7 +2,7 @@
 API_V1_STR=/api/v1
 PROJECT_NAME=AI/ML Predictions Service
 VERSION=1.0.0
-DEBUG=True
+DEBUG=False
 
 # Server Settings
 HOST=0.0.0.0
@@ -47,13 +47,35 @@ BATCH_SIZE=32
 # Monitoring Settings
 ENABLE_METRICS=True
 METRICS_PORT=8000
-LOG_LEVEL=INFO 
+LOG_LEVEL=INFO
 
+# Application Settings
+APP_NAME=AI/ML Predictions Service
 
+# Predictions Database Settings
+PREDICTIONS_DB_HOST=localhost
+PREDICTIONS_DB_PORT=5432
+PREDICTIONS_DB_USER=postgres
+PREDICTIONS_DB_PASS=postgres
+PREDICTIONS_DB_NAME=predictions
 
-
+# Logistics Database Settings
 LOGISTICS_DB_HOST=localhost
-LOGISTICS_DB_PORT=5433
-LOGISTICS_DB_USER=logistics
-LOGISTICS_DB_PASSWORD=logistics_password
-LOGISTICS_DB_NAME=logistics_engine
+LOGISTICS_DB_PORT=5432
+LOGISTICS_DB_USER=postgres
+LOGISTICS_DB_PASS=postgres
+LOGISTICS_DB_NAME=logistics
+
+# Database Pool Settings
+DB_POOL_SIZE=5
+DB_MAX_OVERFLOW=10
+DB_POOL_TIMEOUT=30
+DB_ECHO=False
+
+# Redis Settings
+REDIS_DB=0
+ENABLE_CACHE=True
+
+# Model Settings
+MODEL_PATH=models/
+MODEL_VERSION=v1
