feat: Add test environment configuration and Docker setup for AI/ML Predictions Service
- Introduce .env.test file for test-specific environment variables, including database and Redis settings.
- Create docker-compose.test.yml for running tests in isolated containers with health checks for PostgreSQL and Redis.
- Implement Dockerfile.test for building the test environment with necessary dependencies and running tests with coverage.
- Add run_docker_tests.sh and run_tests_docker.sh scripts for streamlined test execution in Docker.
- Update requirements.txt and requirements.test.txt to include necessary testing dependencies.
- Refactor database connection handling in database.py to support asyncpg driver for improved performance.
- Enhance test setup in conftest.py to utilize async database engines and fixtures for better isolation and reliability in tests.

--- a/ai-ml-predictions/docker-compose.yml
+++ b/ai-ml-predictions/docker-compose.yml
@@ -76,13 +76,13 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=ai_ml_predictions
+      - POSTGRES_DB=predictions
     ports:
-      - "5434:5432"
+      - "5432:5432"
     volumes:
       - postgres_ml_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d ai_ml_predictions"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d predictions"]
       interval: 5s
       timeout: 5s
       retries: 5
