--- a/ai-ml-predictions/requirements.txt
+++ b/ai-ml-predictions/requirements.txt
@@ -10,13 +10,16 @@ python-dotenv>=1.0.0
 pydantic>=2.5.2
 pydantic-settings>=2.1.0
 starlette==0.36.3
+email-validator>=2.1.0
 
 # Database and Caching
 sqlalchemy>=2.0.23
 asyncpg>=0.29.0
 psycopg2-binary>=2.9.9
 redis>=5.0.1
-alembic>=1.13.0
+aioredis>=2.0.1
+alembic>=1.12.1
+sqlalchemy-utils==0.41.1
 
 # ML Dependencies
 numpy>=1.26.2
@@ -25,18 +28,18 @@ scikit-learn>=1.3.2
 torch==2.1.2
 torchvision==0.16.2
 torchaudio==2.1.2
-mlflow>=2.9.2
+mlflow>=2.8.1
 joblib>=1.3.2
 
 # Async Dependencies
-aiohttp==3.9.3
+aiohttp>=3.9.1
 aiosignal==1.3.1
 anyio==4.3.0
 apscheduler==3.10.4
 
 # HTTP and Networking
 h11==0.14.0
-httpx>=0.25.2
+httpx>=0.25.1
 uvloop==0.19.0
 
 # Utilities
@@ -67,7 +70,7 @@ tenacity>=8.2.3
 # Testing
 pytest>=7.4.3
 pytest-cov>=4.1.0
-pytest-asyncio>=0.23.2
+pytest-asyncio>=0.21.1
 
 # Development
 black>=23.11.0
@@ -85,4 +88,8 @@ opentelemetry-instrumentation-sqlalchemy>=0.42b0
 # Security
 python-jose[cryptography]>=3.3.0
 passlib[bcrypt]>=1.7.4
-python-multipart>=0.0.6 
+python-multipart>=0.0.6
+
+# Additional dependencies
+requests>=2.31.0
+PyYAML>=6.0.1 
