fix: Update PostgreSQL port and related configurations
- Change PostgreSQL port from 5432 to 5436 in run-local.sh, shell:run-local.sh, and .env.example.
- Update docker-compose.yml to reflect the new PostgreSQL port and adjust health check configurations.
- Modify database connection settings in various TypeORM configuration files to use the updated port.
- Replace bcrypt with bcryptjs in package.json and related test files for consistency and compatibility.
- Remove obsolete create-multiple-databases.sh script to streamline database initialization process.

--- a/api-gateway-auth/docker-compose.yml
+++ b/api-gateway-auth/docker-compose.yml
@@ -1,39 +1,23 @@
 version: '3.8'
+
 services:
   postgres:
     image: postgres:16-alpine
+    container_name: api-gateway-auth-postgres
+    environment:
+      POSTGRES_USER: ${DB_USERNAME:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
+      POSTGRES_DB: ${DB_DATABASE:-api_gateway_auth}
     ports:
-      - '5432:5432'
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-      POSTGRES_MULTIPLE_DATABASES: api_gateway_auth,api_gateway_auth_test
+      - '0.0.0.0:5436:5432'
     volumes:
-      - pgdata:/var/lib/postgresql/data
-      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
-
-  migration:
-    image: node:20-alpine
-    working_dir: /app
-    volumes:
-      - .:/app
-    depends_on:
-      - postgres
-    environment:
-      DB_HOST: postgres
-      DB_PORT: 5432
-      DB_USERNAME: postgres
-      DB_PASSWORD: postgres
-      DB_DATABASE: api_gateway_auth
-      NODE_ENV: development
-    command: >
-      sh -c "apk add --no-cache python3 make g++ git &&
-             npm install -g pnpm &&
-             pnpm config set enable-pre-post-scripts true &&
-             pnpm install --unsafe-perm &&
-             pnpm rebuild bcrypt --force &&
-             pnpm run migration:run"
-
+      - postgres_data:/var/lib/postgresql/data
+      - ./pg_hba.conf:/var/lib/postgresql/data/pg_hba.conf
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres -d api_gateway_auth']
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
 volumes:
-  pgdata:
+  postgres_data:
