--- a/api-gateway-auth/package.json
+++ b/api-gateway-auth/package.json
@@ -40,11 +40,11 @@
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@willsoto/nestjs-prometheus": "^6.0.2",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
-    "fastify": "^5.3.2",
+    "fastify": "^5.2.1",
     "nest-winston": "^1.10.2",
     "nestjs-rate-limiter": "^3.1.0",
     "passport": "^0.7.0",
@@ -60,7 +60,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.10",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^8.2.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.3.1",
