--- a/frontend-dashboard/package.json
+++ b/frontend-dashboard/package.json
@@ -30,7 +30,7 @@
     "@tanstack/react-query": "^5.67.1",
     "@types/d3": "^7.4.3",
     "class-variance-authority": "0.7.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.14.2",
+    "recharts": "^2.15.3",
     "shadcn-ui": "0.9.5",
     "tailwind-merge": "^1.14.0",
     "zustand": "^5.0.3"
