--- a/k8s-all-services.yaml
+++ b/k8s-all-services.yaml
@@ -22,6 +22,31 @@ spec:
         ports:
         - containerPort: 8000
           name: http
+        env:
+        - name: PREDICTIONS_DB_HOST
+          value: "postgres"
+        - name: PREDICTIONS_DB_PORT
+          value: "5432"
+        - name: PREDICTIONS_DB_USER
+          value: "postgres"
+        - name: PREDICTIONS_DB_PASS
+          value: "postgres"
+        - name: PREDICTIONS_DB_NAME
+          value: "synkro"
+        - name: PREDICTIONS_DB_URI
+          value: "postgresql://postgres:postgres@postgres:5432/synkro"
+        - name: LOGISTICS_DB_HOST
+          value: "postgres"
+        - name: LOGISTICS_DB_PORT
+          value: "5432"
+        - name: LOGISTICS_DB_USER
+          value: "postgres"
+        - name: LOGISTICS_DB_PASS
+          value: "postgres"
+        - name: LOGISTICS_DB_NAME
+          value: "synkro"
+        - name: LOGISTICS_DB_URI
+          value: "postgresql://postgres:postgres@postgres:5432/synkro"
         resources:
           requests:
             cpu: "500m"
@@ -468,4 +493,64 @@ spec:
     protocol: TCP
     name: http
   selector:
-    app: kibana 
+    app: kibana
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: postgres
+  namespace: default
+spec:
+  serviceName: postgres
+  replicas: 1
+  selector:
+    matchLabels:
+      app: postgres
+  template:
+    metadata:
+      labels:
+        app: postgres
+    spec:
+      containers:
+      - name: postgres
+        image: postgres:15
+        ports:
+        - containerPort: 5432
+          name: postgresql
+        env:
+        - name: POSTGRES_USER
+          value: "postgres"
+        - name: POSTGRES_PASSWORD
+          value: "postgres"
+        - name: POSTGRES_DB
+          value: "synkro"
+        resources:
+          requests:
+            cpu: "500m"
+            memory: "512Mi"
+          limits:
+            cpu: "1000m"
+            memory: "1Gi"
+        volumeMounts:
+        - name: postgres-data
+          mountPath: /var/lib/postgresql/data
+      volumes:
+      - name: postgres-data
+        emptyDir: {}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres
+  namespace: default
+  labels:
+    app: postgres
+spec:
+  type: ClusterIP
+  ports:
+  - port: 5432
+    targetPort: postgresql
+    protocol: TCP
+    name: postgresql
+  selector:
+    app: postgres 
